# sts2-rl-agent

./: .gitignore  CONTRIBUTING.md  DECOMPILED_ARCHITECTURE.md  README.md  RESEARCH.md  pyproject.toml
bridge_mod/: .gitignore  ActionInjector.cs  BridgeMod.cs  BridgeServer.cs  MainFile.cs  README.md  RlAutoSlayer.cs  RlCardRewardScreenHandler.cs  RlCardSelector.cs  RlCombatHandler.cs  RlMapHandler.cs  STS2BridgeMod.csproj  STS2BridgeMod.json  SpeedPatches.cs  StabilityDetector.cs  StateSerializer.cs  create_pck.py  export_presets.cfg  mod_manifest.json
bridge_mod_minimal/: BridgeMod.cs  STS2BridgeMod.csproj
bridge_mod_v2/: BridgeServer.cs  MainFile.cs  RlAutoSlayer.cs  RlCardRewardScreenHandler.cs  RlCardSelector.cs  RlCombatHandler.cs  RlMapHandler.cs  STS2BridgeMod.csproj  STS2BridgeMod.json  STS2BridgeMod.sln.DotSettings  project.godot
decompiled/: --y__InlineArray2.cs  --y__InlineArray3.cs  --y__InlineArray4.cs  --y__InlineArray5.cs  --z__ReadOnlyArray.cs  --z__ReadOnlyList.cs  --z__ReadOnlySingleElementList.cs  NEpochChains.cs  sts2.csproj
docs/: AGENT_USAGE_GUIDE.md  AUTOSLAY_BRIDGE.md  BRIDGE_REPLAY_HARNESS.md  CARDS_REFERENCE.md  DECOMPILATION_GUIDE.md  GAME_BRIDGE_REFERENCE.md  GAME_SYSTEMS_REFERENCE.md  KNOWN_ISSUES.md  MOD_BUILD_GUIDE.md  MONSTERS_REFERENCE.md  PARITY_COVERAGE_BACKLOG.md  PARITY_GAPS.md  POWERS_REFERENCE.md  PROTOCOL.md  RELICS_REFERENCE.md  SIMULATOR_ARCHITECTURE.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
scripts/: benchmark.py  train_combat.py  train_full_run.py
sts2_env/: __init__.py
tests/: conftest.py  test_byrdonis_chain.py  (+85 more)
(+3391 files in other folders)
